--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>JoomHost</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/64026be50c.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -22,9 +23,17 @@
           </p>
           <ul class="contact_box">
             <li class="contact_email">
-              <a href="mailto:infinity@gmail.com ">infinity@gmail.com</a>
+              <a href="mailto:infinity@gmail.com ">
+                <i class="far fa-envelope"></i>
+                <span>infinity@gmail.com</span>
+              </a>
             </li>
-            <li class="contact_phone">+080 0444 333 444</li>
+            <li class="contact_phone">
+              <a href="">
+                <i class="fas fa-phone-volume"></i>
+                <span>+080 0444 333 444</span>
+              </a>
+            </li>
           </ul>
         </div>
         <div class="user">
@@ -62,6 +71,51 @@
     </div>
 
   </header>
+
+  <main class="main">
+    <section class="banner">
+      <div class="banner_content container">
+        <div class="banner_discription">
+          <p class="banner_simple">
+            Simple – Easy to use – 10x faster!
+          </p>
+          <h1 class="banner_heading">The Best Web Hosting</h1>
+          <p class="banner_start_prise">
+            Starting at $7.99 $3.95/month*
+          </p>
+          <p class="banner_enter">
+            Enter your website to see how we can help your business grow ...
+          </p>
+          <ul class="banner_servises">
+            <li class="banner_servises_item">
+              <i class="far fa-check-square"></i> FREE Domain
+            </li>
+            <li class="banner_servises_item">
+              <i class="far fa-check-square"></i> FREE Site Builders
+            </li>
+            <li class="banner_servises_item">
+              <i class="far fa-check-square"></i> 1-Click <i class="fab fa-wordpress-simple"></i> WordPress Install
+            </li>
+            <li class="banner_servises_item">
+              <i class="far fa-check-square"></i> 24/7 Support
+            </li>
+          </ul>
+          <a href="" class="banner_button">Get Started Now!</a>
+          <p>
+            *Special intro offer and 30-day money-back guarantee
+          </p>
+        </div>
+        <div class="banner_img">
+          <div>
+            <img src="img/server.png" alt="Server">
+          </div>
+          <div>
+            <img src="img/block.png" alt="Block">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
