--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   <title>JoomHost</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/64026be50c.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header class="header">
-
     <div class="header_top_line">
       <div class="header_top_line_inner container">
         <div class="contact">
@@ -24,13 +23,13 @@
           <ul class="contact_box">
             <li class="contact_email">
               <a href="mailto:infinity@gmail.com ">
-                <i class="far fa-envelope"></i>
+                <i class="material-icons email">email</i>
                 <span>infinity@gmail.com</span>
               </a>
             </li>
             <li class="contact_phone">
               <a href="">
-                <i class="fas fa-phone-volume"></i>
+                <i class="material-icons">phone</i>
                 <span>+080 0444 333 444</span>
               </a>
             </li>
@@ -88,16 +87,16 @@
           </p>
           <ul class="banner_servises">
             <li class="banner_servises_item">
-              <i class="far fa-check-square"></i> FREE Domain
+              <i class="material-icons">check_circle_outline</i> FREE Domain
             </li>
             <li class="banner_servises_item">
-              <i class="far fa-check-square"></i> FREE Site Builders
+              <i class="material-icons">check_circle_outline</i> FREE Site Builders
             </li>
             <li class="banner_servises_item">
-              <i class="far fa-check-square"></i> 1-Click <i class="fab fa-wordpress-simple"></i> WordPress Install
+              <i class="material-icons">check_circle_outline</i> 1-Click WordPress Install
             </li>
             <li class="banner_servises_item">
-              <i class="far fa-check-square"></i> 24/7 Support
+              <i class="material-icons">check_circle_outline</i> 24/7 Support
             </li>
           </ul>
           <a href="" class="banner_button">Get Started Now!</a>
@@ -114,7 +113,32 @@
           </div>
         </div>
       </div>
+      <div class="domain_section">
+          <div class="domain container">
+            <form action="" method="POST">
+              <input class="domain_search" type="text" placeholder="Find your perfect domain name">
+              <button class="domain_sub" type="submit">Search Domain</button>
+            </form>
+            <div class="domain_cost">
+              <p class="domain_color">
+                  <span class="domain_color_com">.com $12.17</span>
+                  <span class="domain_color_asia">.asia $5.17</span>
+                  <span class="domain_color_online">.online $5.17</span>
+                  <span class="domain_color_me">.me $3.49</span>
+                  <span class="domain_color_cn">.cn $6.99</span>
+                  <span class="domain_color_text">*All prices per annul</span>
+              </p>
+            </div>
+          </div>
+        </div>
     </section>
+
+    <section class="we_offer">
+      <div class="offer container">
+        
+      </div>
+    </section>
+
   </main>
 </body>
 
