--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>JoomHost</title>
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -108,8 +109,13 @@
           <div>
             <img src="img/server.png" alt="Server">
           </div>
-          <div>
+          <div class="banner_img_block">
             <img src="img/block.png" alt="Block">
+            <div class="start_prise">
+              <span>Starting at</span>
+              <span class="prise">$7.99</span>
+              <span>/month</span>
+            </div>
           </div>
         </div>
       </div>
@@ -135,7 +141,55 @@
 
     <section class="we_offer">
       <div class="offer container">
-        
+        <div class="servises">
+          <div class="servises_icon">
+            <div class="servises_icon_item">
+              <img src="img/server_icon.png" alt="server">
+            </div>
+            <div class="servises_icon_item">
+              <img src="img/network_icon.png" alt="network">
+            </div>
+            <div class="servises_icon_item">
+              <img src="img/lock_icon.png" alt="lock">
+            </div>
+          </div>
+          <div class="servises_list">
+            <h2 class="servises_list_title">We offer awesome services</h2>
+            <article class="servises_item">
+              <h3 class="servises_item_title">So Easy to Manage</h3>
+              <p class="servises_item_text">
+                Keywords are the search terms that people into search engines. 
+                Your rankings are based on the relevance of your page to those keywords.
+              </p>
+            </article>
+            <article class="servises_item">
+              <h3 class="servises_item_title">Secure Your Website</h3>
+              <p class="servises_item_text">
+                Keywords are the search terms that people into search engines. 
+                Your rankings are based on the relevance of your page to those keywords.
+              </p>
+            </article>
+            <article class="servises_item">
+              <h3 class="servises_item_title">24/7 Customer Support</h3>
+              <p class="servises_item_text">
+                Keywords are the search terms that people into search engines. 
+                Your rankings are based on the relevance of your page to those keywords.
+              </p>
+            </article>
+          </div>
+        </div>
+        <article class="servises_lots">
+          <h2 class="servises_lots_title">
+            <span class="blue">Lots of hosting</span> services. 
+            Why you should choose us?
+          </h2>
+          <p class="servises_lots_text">
+            You can take a look at the back-end admin panel interface from this 
+            YouTube Video Tutorial:  <a href="" class="blue">youtu.be/Bs9Irmrt220</a>. 
+            In this video, you will get a hint about how easy to customize everything of your pages 
+            using our Shortcodes, and the Drag and Drop functionality.
+          </p>
+        </article>
       </div>
     </section>
 
